[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warwick"
version = "0.1.0"
authors = [
    { name = "Wyatt Avilla" },
    { name = "Faris Zulhazmi" },
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "discord.py>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12.0",
    "mypy>=1.17.0",
]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [ "ALL" ]
ignore = [
    "D",
    "CPY",
    "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
