[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warwick"
version = "0.1.0"
authors = [
    { name = "Wyatt Avilla" },
    { name = "Faris Zulhazmi" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.5.0",
	"tweepy[async]>=4.16.0",
	"aiohttp>=3.12.14",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12.0",
    "mypy>=1.14.0",
]

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [ "ALL" ]
ignore = [
    "D",
    "CPY",
    "E501",
    "S105",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
strict = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
